Fri Dec 26 15:50:45 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/optparse.rb (OptionParser::List#summarize): gives priority
	  to latter switches.  [ruby-dev:36692]

	* lib/optparse.rb (OptionParser#summarize): do not append
	  unnecessary line terminator.

Fri Dec 26 14:01:38 2008  Tanaka Akira  <akr@fsij.org>

	* io.c (fptr_finalize): close the IO object even if finish_writeconv or
	  flush is failed.
	  (finish_writeconv): don't raise.  return errno or exception.
	  (finish_writeconv_arg): removed.
	  (finish_writeconv_sync): follow finish_writeconv change.

	* transcode.c (rb_econv_make_exception): new function.

	* include/ruby/encoding.h (rb_econv_make_exception): declared.

Fri Dec 26 17:04:14 2008  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* lib/irb/input-method.rb (IRB::StdioInputMethod#initialize):
	  removed a 'p' for debugging.

Thu Dec 25 20:57:01 2008  NARUSE, Yui  <naruse@ruby-lang.org>

	* transcode.c (str_transcode0): set encoding when String#encode was
	  given explicit but the same destination and source encoding.

Thu Dec 25 19:35:51 2008  NARUSE, Yui  <naruse@ruby-lang.org>

	* transcode.c (sym_ignore): remove useless symbol.

Mon Dec 22 21:31:11 2008  Tanaka Akira  <akr@fsij.org>

	* numeric.c (int_ord): Integer#ord implemented.

Tue Dec 16 22:15:17 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/minitest/unit.rb (MiniTest::Assertions#assert_instance_of):
	  should assert by instance_of?, not ===.  [ruby-dev:37458]

	* lib/minitest/unit.rb (MiniTest::Assertions#assert_instance_of):
	  typo fixed.

Mon Dec 15 20:59:10 2008  Tanaka Akira  <akr@fsij.org>

	* ext/pty/pty.c (child_info): add slavename.
	  (chfunc): use slavename.
	  (establishShell): set slavename.
	
Tue Dec  9 13:23:18 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_insnhelper.c (check_cfunc): use function pointer.

Thu Nov 27 10:40:52 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/bigdecimal/bigdecimal.c (BigDecimal_div2): should return